# zaltechinf2

Calcv2-main/: CMakeLists.txt  README.md  main.cpp
Figures-main/: Circle.cpp  Figure.h  Rectangle.cpp  Square.cpp  Triangle.cpp  main.cpp
Figures-simple--main/: CMakeLists.txt  Circle.cpp  Circle.h  Figure.cpp  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
KlasyObiekty1-main/: CMakeLists.txt  main.cpp
Lancuch-main/: main.cpp
List--Stack-main/: CMakeLists.txt  list.cpp  list.h  main.cpp
List--queue-main/: list.cpp  list.h  main.cpp
SimpleCalc-main/: CMakeLists.txt  README.md  main.cpp
kolejka-main/: CMakeLists.txt  README.md  Stack.cpp  Stack.h  main.cpp
samochod-zaliczenie-main/: CMakeLists.txt  car.cpp  car.h  main.cpp
wskazniki-main/: CMakeLists.txt  main.cpp  wskaznik.cpp
