cmake_minimum_required(VERSION 3.27)
project(untitled59)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled59 main.cpp
        Figure.cpp
        Rectangle.cpp
        Figure.h
        Rectangle.h
        Square.cpp
        Square.h
        Circle.cpp
        Circle.h
        Triangle.cpp
        Triangle.h)
